# Semester_project_app

./: .gitignore  .gitmodules  CMakeLists.txt  prj.conf
boards/: semester_project_nrf54l05_cpuapp.overlay
boards/RokErnLin/semester_project/: Kconfig.defconfig  Kconfig.semester_project  board.cmake  board.yml  semester_project-pinctrl.dtsi  semester_project_nrf54l05_cpuapp.dts  semester_project_nrf54l05_cpuapp.yml  semester_project_nrf54l05_cpuapp_defconfig
dts/bindings/: st,st1vafe3bx.yaml  st,st1vafe6ax.yaml
include/: npm1300.h
src/: main.c  npm1300.c
stm_drivers/: st_example_links.txt
stm_drivers/wrapper/: st1vafe_wrapper.c  st1vafe_wrapper.h
